crates/icydb-core/tests/ui/traits/runtime_collection_is_not_key_codec.stderr
error[E0277]: the trait bound `Vec<u64>: KeyValueCodec` is not satisfied
 --> tests/ui/traits/runtime_collection_is_not_key_codec.rs:6:24
  |
6 |     assert_key_codec::<Vec<u64>>();
  |                        ^^^^^^^^ the trait `KeyValueCodec` is not implemented for `Vec<u64>`
  |
  = help: the following other types implement trait `KeyValueCodec`:
            ()
            i128
            i16
            i32
            i64
            i8
            icydb_core::types::Account
            icydb_core::types::Principal
          and $N others
note: required by a bound in `assert_key_codec`
 --> tests/ui/traits/runtime_collection_is_not_key_codec.rs:3:24
  |
3 | fn assert_key_codec<T: KeyValueCodec>() {}
  |                        ^^^^^^^^^^^^^ required by this bound in `assert_key_codec`
